--- a/src/app/pages/detalle-restaurante/detalle-restaurante.page.scss
+++ b/src/app/pages/detalle-restaurante/detalle-restaurante.page.scss
@@ -1,8 +1,9 @@
 .datos_restaurante {
   font-size: 1.35rem;
   font-weight: 600;
-  margin-bottom: 10%;
+  margin-bottom: 2%;
   display: block;
+  margin-top: 5%;
   p {
     font-size: 1rem;
     margin-top: 2%;
