--- a/src/app/pages/detalle-restaurante/detalle-restaurante.page.html
+++ b/src/app/pages/detalle-restaurante/detalle-restaurante.page.html
@@ -1,62 +1,44 @@
 
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar [appExpandedDetail]="scrollArea" #toolbar>
+    <!-- <ion-buttons slot="start">
+      <ion-back-button icon="arrow-back"></ion-back-button>
+    </ion-buttons> -->
     <ion-buttons slot="start">
-      <ion-back-button color="danger" icon="arrow-back"></ion-back-button>
+      <ion-back-button>
+      </ion-back-button>
     </ion-buttons>
     <ion-title>
-      Nombre Restaurante
+      {{detailStore.name}}
     </ion-title>
   </ion-toolbar>
+  <ion-segment scrollable value="heart">
+    <ion-segment-button *ngFor="let item of products" value="{{ item.description }}">
+      <ion-label>{{ item.description }}</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+  
 </ion-header>
-
-
-<ion-content padding>
-  <ion-label class="datos_restaurante">
-    Nombre de Restaurante
-    <p>Categorias</p>
-    <p>36imin - $3.400 - 4.5</p>
-  </ion-label>
-  <ion-label class="titulo">
-      Populares
-  </ion-label>
-  <div class="scrolling-wrapper">
-      <div class="card-recomendados">
-          <div class="recomendados">
-              <img src="../../../assets/img/deep-pan.png" alt="" srcset="">
-          </div>
-          <p>Hamburguesa</p>
-          <p>$10.000</p>
-      </div>
-      <div class="card-recomendados">
-          <div class="recomendados">
-              <img src="../../../assets/img/deep-pan.png" alt="" srcset="">
-          </div>
-          <p>Perro Caliente</p>
-          <p>$10.000</p>
-      </div>
-      <div class="card-recomendados">
-          <div class="recomendados">
-              <img src="../../../assets/img/deep-pan.png" alt="" srcset="">
-          </div>
-          <p>Hamburguesa</p>
-          <p>$10.000</p>
-      </div>
-      <div class="card-recomendados">
-          <div class="recomendados">
-              <img src="../../../assets/img/deep-pan.png" alt="" srcset="">
-          </div>
-          <p>Hamburguesa</p>
-          <p>$10.000</p>
-      </div>
-  </div>
+<ion-content #scrollArea scrollEvents="true">
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-label class="datos_restaurante">
+          {{detailStore.name}}
+          <p>Restaurantes</p>
+          <p>{{detailStore.eta}} - {{detailStore.delivery_price | currency:"$":true:"1.0"}}</p>
+        </ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  
   <div class="divider"></div>
-  <app-collapse *ngFor="let technology of technologies" name="{{ technology.name }}"
-    description="{{ technology.description }}" image="{{ technology.image }}" (change)="captureName($event)">
+  <app-collapse *ngFor="let item of products" name="{{ item.description }}"
+    description="{{ item.description }}" image="" [data]="item.products" (change)="captureName($event)">
   </app-collapse>
 </ion-content>
 <ion-footer>
-  <ion-button expand="block" color="danger" size="medium" routerLink="/checkout" class="btn-medium">
+  <ion-button expand="block" *ngIf="habilitar" color="danger" size="medium" routerLink="/checkout" class="btn-medium">
     Ver carrito
   </ion-button>
 </ion-footer>
