--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -30,19 +30,20 @@ ion-content{
     // margin-bottom: 5%;
     .card {
       display: inline-block;
-      margin-right: 3.3%;
-      width: 22%;
+      margin: 1%;
+      width: 30%;
       border-radius: 10px;
       text-align: center;
       color: #000;
       p{
         font-size: 0.8rem;
         margin-top: 5px;
+        display: block;
       }
       .categoria{
         vertical-align: middle;
         // border: #ddd solid;
-        background: #EDCE7A;
+        // background: #EDCE7A;
         border-radius: 10px;
         text-align: center;
         img{
@@ -127,9 +128,18 @@ ion-content{
     font-weight: 600;
     font-size: 1.25rem;
     margin: 0;
-    border-radius: 10px;
+    border-radius: 1px;
+    padding-bottom: 8px;
     margin-bottom: 3%;
-    border: solid 1px #d3d3d3;
+    border-bottom: solid 1px #d3d3d3;
+    .icono_rest{
+      --border-radius: 6px !important;
+      border: 1px solid #d3d3d3;
+      margin-top: 0;
+      width: 70px;
+      height: 70px;
+      padding: 2px;
+    }
     ion-thumbnail{
       width: 85px;
       height: 85px;
